package com.emarket.entity;

public enum Permiso {
    VER_CATALOGO,
    GESTIONAR_CARRITO,
    REALIZAR_COMPRA,
    CARGAR_PRODUCTO,
    GESTIONAR_PRODUCTOS,
    ACTUALIZAR_ESTADO_PEDIDO,
    DAR_ALTA_CLIENTE,
    DAR_BAJA_CLIENTE
}
