classDiagram
    direction TB

    %% Patrón Strategy para Pagos
    class MetodoPago {
        <<interface>>
        +pagar(monto: double)
    }
    class PagoTarjeta {
        +pagar(monto: double)
    }
    class PagoEfectivo {
        +pagar(monto: double)
    }
    MetodoPago <|.. PagoTarjeta
    MetodoPago <|.. PagoEfectivo

    %% Patrón State para el Pedido
    class EstadoPedido {
        <<interface>>
        +proximoEstado(pedido: Pedido)
        +cancelar(pedido: Pedido)
    }
    class EstadoPendiente {
        +proximoEstado(pedido: Pedido)
    }
    class EstadoEnviado {
        +proximoEstado(pedido: Pedido)
    }
    EstadoPedido <|.. EstadoPendiente
    EstadoPedido <|.. EstadoEnviado

    %% Patrón Observer para Notificaciones
    class Notificable {
        <<interface>>
        +actualizar(mensaje: String)
    }
    class EmailNotificacion {
        +actualizar(mensaje: String)
    }
    class SMSNotificacion {
        +actualizar(mensaje: String)
    }
    Notificable <|.. EmailNotificacion
    Notificable <|.. SMSNotificacion

    %% Enumeración de Permisos
    class Permiso {
        <<enumeration>>
        VER_CATALOGO
        GESTIONAR_CARRITO
        REALIZAR_COMPRA
        CARGAR_PRODUCTO
        GESTIONAR_PRODUCTOS
        ACTUALIZAR_ESTADO_PEDIDO
        DAR_ALTA_CLIENTE
        DAR_BAJA_CLIENTE
    }

    %% Clases Principales del Dominio
    class Usuario {
        <<abstract>>
        -id: int
        -username: String
        -password: String
        -permisos: List~Permiso~
        +asignarPermisoCliente()
        +asignarPermisoAdministrador()
    }
    class Cliente {
        -email: String
    }
    class Administrador {
        +gestionarProducto(producto: Producto)
        +cargarCliente()
        +cargarProducto()
        +darDeBajaCliente(cliente: Cliente)
    }
    Usuario <|-- Cliente
    Usuario <|-- Administrador
    
    class Producto {
        -id: int
        -nombre: String
        -precio: double
        -stock: int
        -categoria: Categoria
    }

    class Categoria {
        -id: int
        -nombre: String
        -descripcion: String
    }

    class Pedido {
        -id: int
        -fecha: Date
        -total: double
        -estado: EstadoPedido
        -suscriptores: List~Notificable~
        +setEstado(estadoPedido: EstadoPedido)
        +notificar()
        +procesarPago(metodo: MetodoPago)
    }

    %% Relaciones
    Cliente "1" --> "*" Pedido : realiza
    Pedido "1" *-- "*" Producto : contiene
    Pedido --> EstadoPedido : tiene un
    Pedido --> MetodoPago : usa
    Pedido o-- Notificable : notifica a
    Usuario --> Permiso : posee
    Categoria "1" --> "*" Producto: tiene
